--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -16,6 +16,15 @@ env:
 jobs:
     unit-testing:
         name: Unit Testing
+        services:
+          mongo-db:
+            image: siddharth67/mongo-db:non-prod
+            ports:
+              - 27017:27017
+        env:
+            MONGO_URI: 'mongodb://localhost:27017/superData'
+            MONGO_USERNAME: non-prod-user
+            MONGO_PASSWORD: non-prod-password
         strategy:
           matrix:
             nodejs_version: [18, 20]
@@ -23,6 +32,7 @@ jobs:
             exclude:
               - nodejs_version: 18
                 operating_system: macos-latest
+                
         runs-on: ${{ matrix.operating_system }}
         steps:
         - name: Checkout Repository
@@ -105,7 +115,7 @@ jobs:
     docker:
       name: Docker Containerization
       needs: [unit-testing, code-coverage]
-      permissions: 
+      permissions: # for save package to ghcr
           packages: write
       runs-on: ubuntu-latest
       steps:
