--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -166,3 +166,24 @@ jobs:
           tags: |
               ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
               ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
+
+
+    dev-deploy:
+      if: contains(github.ref, 'feature/')
+      needs: docker
+      runs-on: ubuntu-latest
+      steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
+      
+      - name: Install kubectl CLI
+        uses: azure/setup-kubectl@v3
+        with:
+          version: '1.26'
+
+      - name: Fetch Kubernetes Cluster Details
+        run: |
+          kubectl version --short
+          echo ---------------------------------------------------
+          kubectl get nodes
+ 
