--- a/.github/workflows/reuse-deployment.yml
+++ b/.github/workflows/reuse-deployment.yml
@@ -50,6 +50,7 @@ jobs:
 
             - name: Set Kubeconfig file
               uses: azure/k8s-set-context@v3
+              continue-on-error: true # ignor error and execute the next step (for testing)
               with:
                 method: kubeconfig
                 kubeconfig: ${{ secrets.KUBECONFIG }}
@@ -85,7 +86,7 @@ jobs:
                 kubectl -n ${{ vars.NAMESPACE }} create secret generic mongo-db-creds \
                 --from-literal=MONGO_URI=${{ inputs.mongodb-uri }} \
                 --from-literal=MONGO_USERNAME=${{ vars.MONGO_USERNAME }} \
-                --from-literal=MONGO_PASSWORD=${{ secrets.mongodb-password }} \
+                --from-literal=MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD}} \
                 --save-config \
                 --dry-run=client \
                 -o yaml | kubectl apply -f -
