--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -169,67 +169,27 @@ jobs:
 
 
     dev-deploy:
-      # if : contains(github.ref, 'feature/')
+      if: contains(github.ref, 'feature/')
       needs: docker
-      runs-on: ubuntu-latest
-      steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-      
-      - name: Install kubectl CLI
-        uses: azure/setup-kubectl@v3
-        with: 
-          version: 'v1.28.2'
+      uses: ./.github/workflows/reuse-deployment.yml
+      secrets: 
+        k8s-kubeconfig: ${{ secrets.KUBECONFIG }}
+        mongodb-password: ${{ secrets.MONGO_PASSWORD}}
+      with:
+        mongodb-uri: ${{ vars.MONGO_URI }}
+        environment: development
+        k8s-manifest-dir: kubernetes/development/
 
-      - name: Set Kubeconfig file
-        uses: azure/k8s-set-context@v3
-        continue-on-error: true # ignor error and execute the next step (for testing)
-        with:
-          method: kubeconfig
-          kubeconfig: ${{ secrets.KUBECONFIG }}
-
-      - name: Fetch Kubernetes Cluster Details
-        run: |
-          kubectl version --short
-          echo ---------------------------------------------------
-          kubectl get nodes
-
-          - name: Save Nginx Ingress Controller IP as a GITHUB Environment Variable
-          run: |
-            echo "INGRESS_IP=$(kubectl -n ingress-nginx get services ingress-nginx-controller -o jsonpath="{.status.loadBalancer.ingress[0].ip}")" >> $GITHUB_ENV
-        
-      - name: Replace Token in Manifest files
-        uses: cschleiden/replace-tokens@v1
-        with:
-          tokenPrefix: '_{_'
-          tokenSuffix: '_}_'
-          files: '["${{ inputs.k8s-manifest-dir }}*.yaml"]'
-        env:
-          NAMESPACE: ${{ vars.NAMESPACE }}
-          REPLICAS: ${{ vars.REPLICAS }}
-          IMAGE: ${{ vars.DOCKERHUB_USERNAME }}/solar-system:${{ github.sha }}
-          INGRESS_IP:  ${{ env.INGRESS_IP }}
-
-      - name: Check files
-        run: |
-          cat ${{ inputs.k8s-manifest-dir }}*.yaml
-
-      - name: Create MongoDB Secret
-        run: |
-          kubectl -n ${{ vars.NAMESPACE }} create secret generic mongo-db-creds \
-          --from-literal=MONGO_URI=${{ inputs.mongodb-uri }} \
-          --from-literal=MONGO_USERNAME=${{ vars.MONGO_USERNAME }} \
-          --from-literal=MONGO_PASSWORD=${{ secrets.mongodb-password }} \
-          --save-config \
-          --dry-run=client \
-          -o yaml | kubectl apply -f -
-      
-      - name: Deploy to Dev Env
-        run: |
-          kubectl apply -f ${{ inputs.k8s-manifest-dir }}
-
-      - name: Set App Ingress Host URL
-        id: set-ingress-host-address
-        run: |
-          echo "APP_INGRESS_HOST=$(kubectl -n ${{ vars.NAMESPACE }} get ingress -o jsonpath="{.items[0].spec.tls[0].hosts[0]}")" >> "$GITHUB_OUTPUT"
- 
+    dev-integration-testing:
+        if: contains(github.ref, 'feature/')
+        name: Dev Integration Testing
+        needs: dev-deploy
+        runs-on: ubuntu-latest
+        steps:
+          - name: Test URL Output using CURL and JQ
+            env:
+              URL: ${{ needs.dev-deploy.outputs.application-url }}
+            run: |
+              echo $URL
+              echo "--------------------------------------------"
+              curl https://$URL/live -s -k | jq -r .status | grep -i live
