--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -171,25 +171,30 @@ jobs:
     dev-deploy:
       #if : contains(github.ref, 'feature/')
       needs: docker
-      uses: ./.github/workflows/reuse-deployment.yml
-      secrets: 
-        k8s-kubeconfig: ${{ secrets.KUBECONFIG }}
-        mongodb-password: ${{ secrets.MONGO_PASSWORD}}
-      with:
-        mongodb-uri: ${{ vars.MONGO_URI }}
-        environment: development
-        k8s-manifest-dir: kubernetes/development/
+      environment: 
+        name: development
+        url: https://${{ steps.set-ingress-host-address.outputs.APP_INGRESS_HOST }}
+      outputs:
+        APP_INGRESS_URL: ${{ steps.set-ingress-host-address.outputs.APP_INGRESS_HOST }}
+      runs-on: ubuntu-latest
+      steps:
+          - name: Checkout Repo
+            uses: actions/checkout@v4
+          
+          - name: Install kubectl CLI
+            uses: azure/setup-kubectl@v3
+            with:
+              version: '1.26.0'
 
-    dev-integration-testing:
-        #if : contains(github.ref, 'feature/')
-        name: Dev Integration Testing
-        needs: dev-deploy
-        runs-on: ubuntu-latest
-        steps:
-          - name: Test URL Output using CURL and JQ
-            env:
-              URL: ${{ needs.dev-deploy.outputs.application-url }}
+          - name: Set Kubeconfig file
+            uses: azure/k8s-set-context@v3
+            continue-on-error: true # ignor error and execute the next step (for testing)
+            with:
+              method: kubeconfig
+              kubeconfig: ${{ secrets.KUBECONFIG }}
+
+          - name: Fetch Kubernetes Cluster Details
             run: |
-              echo $URL
-              echo "--------------------------------------------"
-              curl https://$URL/live -s -k | jq -r .status | grep -i live
+              kubectl version --short
+              echo ---------------------------------------------------
+              kubectl get nodes
